# maunakea

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md  TASK-PLAN-maunakea-skeleton.md  TASK-PLAN-phase2-iterate.md
src/maunakea/: __init__.py  cli.py  dataset.py  engine.py  goal.py  memory.py
tests/: conftest.py  test_dataset.py  test_engine.py  test_memory.py  test_smoke.py
